--- a/index.html
+++ b/index.html
@@ -2083,6 +2083,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/TCYB.2021.3050141" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
     </div>
@@ -2339,6 +2343,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/TCYB.2020.3043265" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 
