--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -42,7 +42,7 @@ Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
   programming in dynamic flexible job shop scheduling.
  <em>IEEE Transactions on Cybernetics</em>, jan 2021.
 [&nbsp;<a href="publication-accepted_bib.html#zhang2021collaborative">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/TCYB.2021.3050141">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -58,7 +58,7 @@ Yuzhou Zhang, Yi&nbsp;Mei, Shihua Huang, Xin Zheng, and Cuijuan Zhang.
   capacitated arc routingproblem.
  <em>IEEE Transactions on Cybernetics</em>, dec 2020.
 [&nbsp;<a href="publication-accepted_bib.html#zhang2020route">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/TCYB.2020.3043265">DOI</a>&nbsp;]
 
 </td>
 </tr>
