--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -33,7 +33,7 @@
   number = {},
   pages = {},
   publisher = {IEEE},
-  doi = {}
+  doi = {10.1109/TCYB.2021.3050141}
 }
 </pre>
 
@@ -48,7 +48,7 @@
   number = {},
   pages = {},
   publisher = {IEEE},
-  doi = {}
+  doi = {10.1109/TCYB.2020.3043265}
 }
 </pre>
 
