--- a/publication/index.html
+++ b/publication/index.html
@@ -1104,6 +1104,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/TCYB.2021.3050141" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 </p>
 
@@ -1321,6 +1325,10 @@
 
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/TCYB.2020.3043265" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 </p>
