--- a/ecco/index.html
+++ b/ecco/index.html
@@ -533,7 +533,6 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <li><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></li>
-<li>Guanqiang Gao</li>
 <li><a href="https://ecs.wgtn.ac.nz/Main/GradZhixingHuang">Zhixing Huang</a></li>
 <li><a href="https://ecs.wgtn.ac.nz/Main/GradMohammodSazidZamanKhan">Sazid Khan</a></li>
 <li>Jordan MacLaclan</li>
@@ -549,12 +548,13 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <h4 id="alumni">Alumni</h4>
 
 <ul>
+<li>Guanqiang Gao (visited in 2020)</li>
 <li><a href="https://www.victoria.ac.nz/architecture/research/current-phd-research/harry-yi-he">Harry He</a> (Graduated in 2020)</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradGuiyingHuang">Victoria Huang</a> (Graduated in 2020)</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a> (Graduated in 2020)</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradAtiyaMasood">Atiya Masood</a> (Graduated in 2020)</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a> (Graduated in 2020)</li>
-<li><a href="https://www.researchgate.net/profile/Binzi_Xu">Binzi Xu</a> (Visiting student from Jiangnan University, 2018-2019)</li>
+<li><a href="https://www.researchgate.net/profile/Binzi_Xu">Binzi Xu</a> (Visiting student from Jiangnan University, 2018-2019, graduated in 2020)</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradJohnPark">John Park (Graduated in 2019)</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradDeepakKarunakaran">Deepak Karunakaran (Graduated in 2019)</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradYimingPeng">Yiming Peng (Graduated in 2019, working in KPMG)</a></li>
