--- a/index.html
+++ b/index.html
@@ -2836,7 +2836,8 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <li><strong>Member</strong> of IEEE Task Force on Operations Research and Management Sciences, 2018-present</li>
 <li><strong>Member</strong> of IEEE Task Force on Evolutionary Scheduling and Combinatorial Optimization, 2016-2017</li>
 <li><strong>Member</strong> of IEEE Task Force on Large Scale Optimisation, 2015-2016</li>
-<li><strong>Treasurer</strong> of IEEE New Zealand Central Section, 2018-present</li>
+<li><strong>Chair</strong> of IEEE New Zealand Central Section, 2021-present</li>
+<li><strong>Treasurer</strong> of IEEE New Zealand Central Section, 2018-2020</li>
 <li><strong>Young Professional Coordinator</strong> of IEEE New Zealand Central Section, 2018</li>
 <li>IEEE Senior Member, ACM Member</li>
 </ul>
