--- a/index.html
+++ b/index.html
@@ -2845,7 +2845,8 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <h3 id="internal-vuw">Internal (VUW)</h3>
 
 <ul>
-<li>ENGR/COMP489 (Honours Project) Committee Member, 2019</li>
+<li>Red-Folder Committee Member (Admission for Masters of COMP/AI, PGDipSc COMP/AI)</li>
+<li>ENGR/COMP489 (Honours Project) Committee Member, 2019, 2020</li>
 </ul>
 
   </div>
