--- a/index.html
+++ b/index.html
@@ -2674,7 +2674,7 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <ul>
 <li><a href="https://www.wgtn.ac.nz/courses/comp/261/2021/offering?crn=18314">Algorithms and Data Structures (COMP261)</a></li>
 <li><a href="https://www.wgtn.ac.nz/courses/comp/307/2021/offering?crn=968">Introduction to Artificial Intelligence (COMP307)</a> <strong>[Course Coordinator]</strong></li>
-<li><a href="https://www.wgtn.ac.nz/courses/aiml/420/2021/offering?crn=33065">Artificial Intelligence (AIML420)</a></li>
+<li><a href="https://www.wgtn.ac.nz/courses/aiml/420/2021/offering?crn=33065">Artificial Intelligence (AIML420)</a> <strong>[Course Coordinator]</strong></li>
 <li><a href="https://www.wgtn.ac.nz/courses/aiml/426/2021/offering?crn=33068">Evolutionary Computation and Learning (AIML426)</a> <strong>[Course Coordinator]</strong></li>
 </ul>
 
