--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,7 +18,23 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2021correlation">1</a>]
+[<a name="zhang2021multitask">1</a>]
+</td>
+<td class="bibtexitem">
+Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, Kay&nbsp;Chen Tan, and Mengjie Zhang.
+ Multitask genetic programming based generative hyper-heuristics: A
+  case study in dynamic scheduling.
+ <em>IEEE Transactions on Cybernetics</em>, mar 2021.
+[&nbsp;<a href="publication-accepted_bib.html#zhang2021multitask">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="zhang2021correlation">2</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
@@ -34,7 +50,7 @@ Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2021collaborative">2</a>]
+[<a name="zhang2021collaborative">3</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
@@ -50,12 +66,12 @@ Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020route">3</a>]
+[<a name="zhang2020route">4</a>]
 </td>
 <td class="bibtexitem">
 Yuzhou Zhang, Yi&nbsp;Mei, Shihua Huang, Xin Zheng, and Cuijuan Zhang.
  A route clustering and search heuristic for largescale multi-depot
-  capacitated arc routingproblem.
+  capacitated arc routing problem.
  <em>IEEE Transactions on Cybernetics</em>, dec 2020.
 [&nbsp;<a href="publication-accepted_bib.html#zhang2020route">bib</a>&nbsp;| 
 <a href="https://doi.org/10.1109/TCYB.2020.3043265">DOI</a>&nbsp;]
@@ -66,7 +82,7 @@ Yuzhou Zhang, Yi&nbsp;Mei, Shihua Huang, Xin Zheng, and Cuijuan Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="gao2020adaptive">4</a>]
+[<a name="gao2020adaptive">5</a>]
 </td>
 <td class="bibtexitem">
 Guanqiang Gao, Yi&nbsp;Mei, Yahui Jia, Will Browne, and Bin Xin.
@@ -82,7 +98,7 @@ Guanqiang Gao, Yi&nbsp;Mei, Yahui Jia, Will Browne, and Bin Xin.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020surrogate">5</a>]
+[<a name="zhang2020surrogate">6</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, Mengjie Zhang, and Kay&nbsp;Chen Tan.
@@ -98,7 +114,7 @@ Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, Mengjie Zhang, and Kay&nbsp;Chen Ta
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020divide">6</a>]
+[<a name="zhang2020divide">7</a>]
 </td>
 <td class="bibtexitem">
 Yuzhou Zhang, Yi&nbsp;Mei, Buzhong Zhang, and Keqin Jiang.
@@ -114,7 +130,7 @@ Yuzhou Zhang, Yi&nbsp;Mei, Buzhong Zhang, and Keqin Jiang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="li2020divide">7</a>]
+[<a name="li2020divide">8</a>]
 </td>
 <td class="bibtexitem">
 Lin Li, Wei Fang, Yi&nbsp;Mei, and Quan Wang.
@@ -130,7 +146,7 @@ Lin Li, Wei Fang, Yi&nbsp;Mei, and Quan Wang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="jia2020contribution">8</a>]
+[<a name="jia2020contribution">9</a>]
 </td>
 <td class="bibtexitem">
 Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -146,7 +162,7 @@ Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020evolving">9</a>]
+[<a name="zhang2020evolving">10</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
@@ -162,7 +178,7 @@ Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="costa2020adaptive">10</a>]
+[<a name="costa2020adaptive">11</a>]
 </td>
 <td class="bibtexitem">
 Joao Costa, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -179,7 +195,7 @@ Joao Costa, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="wang2020towards">11</a>]
+[<a name="wang2020towards">12</a>]
 </td>
 <td class="bibtexitem">
 Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -197,7 +213,7 @@ Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020gphh">12</a>]
+[<a name="ardeh2020gphh">13</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -214,7 +230,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020diversity">13</a>]
+[<a name="ardeh2020diversity">14</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -231,7 +247,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020parametric">14</a>]
+[<a name="ardeh2020parametric">15</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -248,7 +264,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2020cooperative">15</a>]
+[<a name="tan2020cooperative">16</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
