--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,23 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="zhang2021correlation"></a><pre>
+<h1>publication-accepted.bib</h1><a name="zhang2021multitask"></a><pre>
+@article{<a href="publication-accepted.html#zhang2021multitask">zhang2021multitask</a>,
+  title = {Multitask Genetic Programming Based Generative Hyper-heuristics: A Case Study
+in Dynamic Scheduling},
+  author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Tan, Kay Chen and Zhang, Mengjie},
+  journal = {IEEE Transactions on Cybernetics},
+  month = {mar},
+  year = {2021},
+  vol = {},
+  number = {},
+  pages = {},
+  publisher = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="zhang2021correlation"></a><pre>
 @article{<a href="publication-accepted.html#zhang2021correlation">zhang2021correlation</a>,
   title = {Correlation Coefficient based Recombinative Guidance for Genetic Programming Hyper-heuristics in Dynamic Flexible Job Shop Scheduling},
   author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Zhang, Mengjie},
@@ -39,7 +55,7 @@
 
 <a name="zhang2020route"></a><pre>
 @article{<a href="publication-accepted.html#zhang2020route">zhang2020route</a>,
-  title = {A Route Clustering and Search Heuristic for LargeScale Multi-Depot Capacitated Arc RoutingProblem},
+  title = {A Route Clustering and Search Heuristic for LargeScale Multi-Depot Capacitated Arc Routing Problem},
   author = {Zhang, Yuzhou and Mei, Yi and Huang, Shihua and Zheng, Xin and Zhang, Cuijuan},
   journal = {IEEE Transactions on Cybernetics},
   month = {dec},
