--- a/publication/zhang-2020-route/index.html
+++ b/publication/zhang-2020-route/index.html
@@ -119,7 +119,7 @@
   
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/publication/zhang-2020-route/">
-  <meta property="og:title" content="A Route Clustering and Search Heuristic for LargeScale Multi-Depot Capacitated Arc RoutingProblem | Yi Mei @ VUW">
+  <meta property="og:title" content="A Route Clustering and Search Heuristic for LargeScale Multi-Depot Capacitated Arc Routing Problem | Yi Mei @ VUW">
   <meta property="og:description" content=""><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
@@ -132,7 +132,7 @@
 
   
 
-  <title>A Route Clustering and Search Heuristic for LargeScale Multi-Depot Capacitated Arc RoutingProblem | Yi Mei @ VUW</title>
+  <title>A Route Clustering and Search Heuristic for LargeScale Multi-Depot Capacitated Arc Routing Problem | Yi Mei @ VUW</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" >
@@ -404,7 +404,7 @@
   
   
 <div class="article-container pt-3">
-  <h1 itemprop="name">A Route Clustering and Search Heuristic for LargeScale Multi-Depot Capacitated Arc RoutingProblem</h1>
+  <h1 itemprop="name">A Route Clustering and Search Heuristic for LargeScale Multi-Depot Capacitated Arc Routing Problem</h1>
 
   
 
@@ -495,7 +495,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=A%20Route%20Clustering%20and%20Search%20Heuristic%20for%20LargeScale%20Multi-Depot%20Capacitated%20Arc%20RoutingProblem&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2fzhang-2020-route%2f"
+         href="https://twitter.com/intent/tweet?text=A%20Route%20Clustering%20and%20Search%20Heuristic%20for%20LargeScale%20Multi-Depot%20Capacitated%20Arc%20Routing%20Problem&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2fzhang-2020-route%2f"
          target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
@@ -509,21 +509,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2fzhang-2020-route%2f&amp;title=A%20Route%20Clustering%20and%20Search%20Heuristic%20for%20LargeScale%20Multi-Depot%20Capacitated%20Arc%20RoutingProblem"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2fzhang-2020-route%2f&amp;title=A%20Route%20Clustering%20and%20Search%20Heuristic%20for%20LargeScale%20Multi-Depot%20Capacitated%20Arc%20Routing%20Problem"
          target="_blank" rel="noopener">
         <i class="fab fa-linkedin-in"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2fzhang-2020-route%2f&amp;title=A%20Route%20Clustering%20and%20Search%20Heuristic%20for%20LargeScale%20Multi-Depot%20Capacitated%20Arc%20RoutingProblem"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2fzhang-2020-route%2f&amp;title=A%20Route%20Clustering%20and%20Search%20Heuristic%20for%20LargeScale%20Multi-Depot%20Capacitated%20Arc%20Routing%20Problem"
          target="_blank" rel="noopener">
         <i class="fab fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=A%20Route%20Clustering%20and%20Search%20Heuristic%20for%20LargeScale%20Multi-Depot%20Capacitated%20Arc%20RoutingProblem&amp;body=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2fzhang-2020-route%2f">
+         href="mailto:?subject=A%20Route%20Clustering%20and%20Search%20Heuristic%20for%20LargeScale%20Multi-Depot%20Capacitated%20Arc%20Routing%20Problem&amp;body=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2fzhang-2020-route%2f">
         <i class="fas fa-envelope"></i>
       </a>
     </li>
