--- a/404.html
+++ b/404.html
@@ -394,6 +394,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/zhang-2021-multitask/">Multitask Genetic Programming Based Generative Hyper-heuristics: A Case Studyin Dynamic Scheduling</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/zhang-2021-collaborative/">Collaborative Multi-fidelity based Surrogate Models for Genetic Programming in Dynamic Flexible Job Shop Scheduling</a></li>
   </ul>
   
@@ -402,15 +406,11 @@
   </ul>
   
   <ul>
-    <li><a href="/publication/zhang-2020-route/">A Route Clustering and Search Heuristic for LargeScale Multi-Depot Capacitated Arc RoutingProblem</a></li>
+    <li><a href="/publication/zhang-2020-route/">A Route Clustering and Search Heuristic for LargeScale Multi-Depot Capacitated Arc Routing Problem</a></li>
   </ul>
   
   <ul>
     <li><a href="/publication/gao-2020-adaptive/">Adaptive Coordination Ant Colony Optimisation for Multi-Point Dynamic Aggregation</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/li-2020-divide/">Cooperative coevolution for large-scale global optimization based on fuzzy decomposition</a></li>
   </ul>
   
   
