--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2021/03/10, Yifan Yang 2021/03/03, Zhixing Huang, representations of GP for JSS 2021/02/24, Kirita-Rose Escott, practice PhD proposal. 2021/02/17, Mazhar Anzari Ardeh, multitask genetic programming for UCARP. 2021/02/10, Meng Xu, reinforcement learning and genetic programming for dynamic flexible job shop scheduling. 2021/02/03, Jordan MacLachlan, presentation on look-ahead GP for UCARP. 2021/01/27, Fangfang Zhang, discussions on how to write a paper. 2021/01/20, Tao Shi, discussions on a paper about reinforcement learning for cloud resource allocation.">
+  <meta name="description" content="2021/03/24, Joao Costa, 2021/03/17, Shaolin Wang, 2021/03/10, Yifan Yang, data-driven bus timetable optimisation 2021/03/03, Zhixing Huang, representations of GP for JSS 2021/02/24, Kirita-Rose Escott, practice PhD proposal. 2021/02/17, Mazhar Anzari Ardeh, multitask genetic programming for UCARP. 2021/02/10, Meng Xu, reinforcement learning and genetic programming for dynamic flexible job shop scheduling. 2021/02/03, Jordan MacLachlan, presentation on look-ahead GP for UCARP. 2021/01/27, Fangfang Zhang, discussions on how to write a paper. 2021/01/20, Tao Shi, discussions on a paper about reinforcement learning for cloud resource allocation.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2021/03/10, Yifan Yang 2021/03/03, Zhixing Huang, representations of GP for JSS 2021/02/24, Kirita-Rose Escott, practice PhD proposal. 2021/02/17, Mazhar Anzari Ardeh, multitask genetic programming for UCARP. 2021/02/10, Meng Xu, reinforcement learning and genetic programming for dynamic flexible job shop scheduling. 2021/02/03, Jordan MacLachlan, presentation on look-ahead GP for UCARP. 2021/01/27, Fangfang Zhang, discussions on how to write a paper. 2021/01/20, Tao Shi, discussions on a paper about reinforcement learning for cloud resource allocation."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2021/03/24, Joao Costa, 2021/03/17, Shaolin Wang, 2021/03/10, Yifan Yang, data-driven bus timetable optimisation 2021/03/03, Zhixing Huang, representations of GP for JSS 2021/02/24, Kirita-Rose Escott, practice PhD proposal. 2021/02/17, Mazhar Anzari Ardeh, multitask genetic programming for UCARP. 2021/02/10, Meng Xu, reinforcement learning and genetic programming for dynamic flexible job shop scheduling. 2021/02/03, Jordan MacLachlan, presentation on look-ahead GP for UCARP. 2021/01/27, Fangfang Zhang, discussions on how to write a paper. 2021/01/20, Tao Shi, discussions on a paper about reinforcement learning for cloud resource allocation."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -503,8 +503,10 @@
 
     <div class="article-style" itemprop="articleBody">
       <ul>
-<li>2021/03/10, <a href="https://ecs.wgtn.ac.nz/Main/GradYifanYang">Yifan Yang</a></li>
-<li>2021/03/03, <a href="https://ecs.wgtn.ac.nz/Main/GradZhixingHuang">Zhixing Huang</a>, representations of GP for JSS</li>
+<li>2021/03/24, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a></strong>,</li>
+<li>2021/03/17, <strong><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></strong>,</li>
+<li>2021/03/10, <strong><a href="https://ecs.wgtn.ac.nz/Main/GradYifanYang">Yifan Yang</a></strong>, data-driven bus timetable optimisation</li>
+<li>2021/03/03, <strong><a href="https://ecs.wgtn.ac.nz/Main/GradZhixingHuang">Zhixing Huang</a></strong>, representations of GP for JSS</li>
 <li>2021/02/24, <strong><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></strong>, practice PhD proposal.</li>
 <li>2021/02/17, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></strong>, multitask genetic programming for UCARP.</li>
 <li>2021/02/10, <a href="https://ecs.wgtn.ac.nz/Main/GradMengXu">Meng Xu</a>, reinforcement learning and genetic programming for dynamic flexible job shop scheduling.</li>
