--- a/publication/zhang-2020-surrogate/index.html
+++ b/publication/zhang-2020-surrogate/index.html
@@ -592,6 +592,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1109/TEVC.2021.3065707" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
