--- a/index.html
+++ b/index.html
@@ -2093,6 +2093,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/TCYB.2021.3065340" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
     </div>
