--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -26,7 +26,7 @@ Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, Kay&nbsp;Chen Tan, and Mengjie Zhan
   case study in dynamic scheduling.
  <em>IEEE Transactions on Cybernetics</em>, mar 2021.
 [&nbsp;<a href="publication-accepted_bib.html#zhang2021multitask">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/TCYB.2021.3065340">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -106,7 +106,7 @@ Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, Mengjie Zhang, and Kay&nbsp;Chen Ta
   dynamic flexible job shop scheduling.
  <em>IEEE Transactions on Evolutionary Computation</em>, nov 2020.
 [&nbsp;<a href="publication-accepted_bib.html#zhang2020surrogate">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/TEVC.2021.3065707">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -256,7 +256,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
  In <em>Proceedings of the Australasian Joint Conference on
   Artificial Intelligence (AJCAI)</em>. Springer, sep 2020.
 [&nbsp;<a href="publication-accepted_bib.html#ardeh2020parametric">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1007/978-3-030-64984-5_12">DOI</a>&nbsp;]
 
 </td>
 </tr>
