--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -19,7 +19,7 @@ in Dynamic Scheduling},
   number = {},
   pages = {},
   publisher = {IEEE},
-  doi = {}
+  doi = {10.1109/TCYB.2021.3065340}
 }
 </pre>
 
@@ -95,7 +95,7 @@ Job Shop Scheduling},
   number = {},
   pages = {},
   publisher = {IEEE},
-  doi = {}
+  doi = {10.1109/TEVC.2021.3065707}
 }
 </pre>
 
@@ -220,7 +220,7 @@ Job Shop Scheduling},
   year = {2020},
   month = {sep},
   organization = {Springer},
-  doi = {}
+  doi = {10.1007/978-3-030-64984-5_12}
 }
 </pre>
 
