--- a/publication/ardeh-2020-parametric/index.html
+++ b/publication/ardeh-2020-parametric/index.html
@@ -572,6 +572,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1007/978-3-030-64984-5_12" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
