--- a/publication/index.html
+++ b/publication/index.html
@@ -1010,6 +1010,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/TCYB.2021.3065340" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 </p>
 
@@ -1546,6 +1550,10 @@
 
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/TEVC.2021.3065707" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 </p>
@@ -2319,6 +2327,10 @@
 
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1007/978-3-030-64984-5_12" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 </p>
