--- a/project/esco/index.html
+++ b/project/esco/index.html
@@ -1527,6 +1527,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/gao-2020-memetic/gao-2020-memetic.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
