--- a/publication/index.html
+++ b/publication/index.html
@@ -1829,6 +1829,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/wang-2020-towards/wang-2020-towards.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -2026,6 +2030,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/ardeh-2020-diversity/ardeh-2020-diversity.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -2216,6 +2224,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/costa-2020-adaptive/costa-2020-adaptive.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -2308,6 +2320,10 @@
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/ardeh-2020-parametric/ardeh-2020-parametric.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
@@ -3879,6 +3895,10 @@
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/gao-2020-memetic/gao-2020-memetic.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
