--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -168,7 +168,7 @@ Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
 Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
  Evolving scheduling heuristics via genetic programming with feature
   selection in dynamic flexible job shop scheduling.
- <em>IEEE Transactions on Cybernetics</em>, sep 2020.
+ <em>IEEE Transactions on Cybernetics</em>, (4):1797--1811, apr 2021.
 [&nbsp;<a href="publication-accepted_bib.html#zhang2020evolving">bib</a>&nbsp;| 
 <a href="https://doi.org/10.1109/TCYB.2020.3024849">DOI</a>&nbsp;]
 
