--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -149,11 +149,11 @@ Job Shop Scheduling},
   title = {Evolving Scheduling Heuristics via Genetic Programming with Feature Selection in Dynamic Flexible Job Shop Scheduling},
   author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Zhang, Mengjie},
   journal = {IEEE Transactions on Cybernetics},
-  month = {sep},
-  year = {2020},
-  vol = {},
-  number = {},
-  pages = {},
+  month = {apr},
+  year = {2021},
+  vol = {51},
+  number = {4},
+  pages = {1797--1811},
   publisher = {IEEE},
   doi = {10.1109/TCYB.2020.3024849}
 }
