--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -483,7 +483,7 @@
   </div>
   
   <div>
-    <h2><a href="/publication/zhang-2020-evolving/">Evolving Scheduling Heuristics via Genetic Programming with Feature Selection in Dynamic Flexible Job Shop Scheduling</a></h2>
+    <h2><a href="/publication/tan-2020-cooperative/">A Cooperative Coevolution Genetic Programming Hyper-Heuristic Approach for On-line Resource Allocation in Container-based Clouds</a></h2>
     <div class="article-style">
       
     </div>
