--- a/publication-journal_bib.html
+++ b/publication-journal_bib.html
@@ -7,7 +7,22 @@
 </head>
 
 <body>
-<h1>publication-journal.bib</h1><a name="da2020survey"></a><pre>
+<h1>publication-journal.bib</h1><a name="zhang2020evolving"></a><pre>
+@article{<a href="publication-journal.html#zhang2020evolving">zhang2020evolving</a>,
+  title = {Evolving Scheduling Heuristics via Genetic Programming with Feature Selection in Dynamic Flexible Job Shop Scheduling},
+  author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Zhang, Mengjie},
+  journal = {IEEE Transactions on Cybernetics},
+  month = {apr},
+  year = {2021},
+  vol = {51},
+  number = {4},
+  pages = {1797--1811},
+  publisher = {IEEE},
+  doi = {10.1109/TCYB.2020.3024849}
+}
+</pre>
+
+<a name="da2020survey"></a><pre>
 @article{<a href="publication-journal.html#da2020survey">da2020survey</a>,
   title = {A Survey of Evolutionary Computation for Web Service Composition: A Technical Perspective},
   author = {da Silva, Alexandre Sawczuk and Ma, Hui and Mei, Yi and Zhang, Mengjie},
