--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -9,8 +9,7 @@
 <body>
 <h1>publication-accepted.bib</h1><a name="zhang2021multitask"></a><pre>
 @article{<a href="publication-accepted.html#zhang2021multitask">zhang2021multitask</a>,
-  title = {Multitask Genetic Programming Based Generative Hyper-heuristics: A Case Study
-in Dynamic Scheduling},
+  title = {Multitask Genetic Programming Based Generative Hyper-heuristics: A Case Study in Dynamic Scheduling},
   author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Tan, Kay Chen and Zhang, Mengjie},
   journal = {IEEE Transactions on Cybernetics},
   month = {mar},
