--- a/publication/zhang-2021-multitask/index.html
+++ b/publication/zhang-2021-multitask/index.html
@@ -119,7 +119,7 @@
   
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/publication/zhang-2021-multitask/">
-  <meta property="og:title" content="Multitask Genetic Programming Based Generative Hyper-heuristics: A Case Studyin Dynamic Scheduling | Yi Mei @ VUW">
+  <meta property="og:title" content="Multitask Genetic Programming Based Generative Hyper-heuristics: A Case Study in Dynamic Scheduling | Yi Mei @ VUW">
   <meta property="og:description" content=""><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
@@ -132,7 +132,7 @@
 
   
 
-  <title>Multitask Genetic Programming Based Generative Hyper-heuristics: A Case Studyin Dynamic Scheduling | Yi Mei @ VUW</title>
+  <title>Multitask Genetic Programming Based Generative Hyper-heuristics: A Case Study in Dynamic Scheduling | Yi Mei @ VUW</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" >
@@ -404,7 +404,7 @@
   
   
 <div class="article-container pt-3">
-  <h1 itemprop="name">Multitask Genetic Programming Based Generative Hyper-heuristics: A Case Studyin Dynamic Scheduling</h1>
+  <h1 itemprop="name">Multitask Genetic Programming Based Generative Hyper-heuristics: A Case Study in Dynamic Scheduling</h1>
 
   
 
@@ -495,7 +495,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Multitask%20Genetic%20Programming%20Based%20Generative%20Hyper-heuristics%3a%20A%20Case%20Studyin%20Dynamic%20Scheduling&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2fzhang-2021-multitask%2f"
+         href="https://twitter.com/intent/tweet?text=Multitask%20Genetic%20Programming%20Based%20Generative%20Hyper-heuristics%3a%20A%20Case%20Study%20in%20Dynamic%20Scheduling&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2fzhang-2021-multitask%2f"
          target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
@@ -509,21 +509,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2fzhang-2021-multitask%2f&amp;title=Multitask%20Genetic%20Programming%20Based%20Generative%20Hyper-heuristics%3a%20A%20Case%20Studyin%20Dynamic%20Scheduling"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2fzhang-2021-multitask%2f&amp;title=Multitask%20Genetic%20Programming%20Based%20Generative%20Hyper-heuristics%3a%20A%20Case%20Study%20in%20Dynamic%20Scheduling"
          target="_blank" rel="noopener">
         <i class="fab fa-linkedin-in"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2fzhang-2021-multitask%2f&amp;title=Multitask%20Genetic%20Programming%20Based%20Generative%20Hyper-heuristics%3a%20A%20Case%20Studyin%20Dynamic%20Scheduling"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2fzhang-2021-multitask%2f&amp;title=Multitask%20Genetic%20Programming%20Based%20Generative%20Hyper-heuristics%3a%20A%20Case%20Study%20in%20Dynamic%20Scheduling"
          target="_blank" rel="noopener">
         <i class="fab fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Multitask%20Genetic%20Programming%20Based%20Generative%20Hyper-heuristics%3a%20A%20Case%20Studyin%20Dynamic%20Scheduling&amp;body=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2fzhang-2021-multitask%2f">
+         href="mailto:?subject=Multitask%20Genetic%20Programming%20Based%20Generative%20Hyper-heuristics%3a%20A%20Case%20Study%20in%20Dynamic%20Scheduling&amp;body=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2fzhang-2021-multitask%2f">
         <i class="fas fa-envelope"></i>
       </a>
     </li>
