--- a/ecco/index.html
+++ b/ecco/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="Evolutionary Computation for Combinatorial Optimisation (ECCO) Group Introduction Evolutionary Computation for Combinatorial Optimisation (ECCO) Group is a sub-group under the Evolutionary Computation Research Group in Victoria University of Wellington, New Zealand. The group has a wide range of research interests and projects in solving combinatorial optimisation problems using evolutionary computation, including evolutionary vehicle/arc routing, job shop scheduling, cloud resource allocation, Web service composition.
+  <meta name="description" content="Introduction Evolutionary Computation for Combinatorial Optimisation (ECCO) Group is a sub-group under the Evolutionary Computation Research Group in Victoria University of Wellington, New Zealand. The group has a wide range of research interests and projects in solving combinatorial optimisation problems using evolutionary computation, including evolutionary vehicle/arc routing, job shop scheduling, cloud resource allocation, Web service composition.
 People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optimisation, Hyper-heuristics, Genetic Programming, Dynamic Optimisation, Large-Scale Optimisation Prof.">
 
   
@@ -120,8 +120,8 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
   
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco/">
-  <meta property="og:title" content=" | Yi Mei @ VUW">
-  <meta property="og:description" content="Evolutionary Computation for Combinatorial Optimisation (ECCO) Group Introduction Evolutionary Computation for Combinatorial Optimisation (ECCO) Group is a sub-group under the Evolutionary Computation Research Group in Victoria University of Wellington, New Zealand. The group has a wide range of research interests and projects in solving combinatorial optimisation problems using evolutionary computation, including evolutionary vehicle/arc routing, job shop scheduling, cloud resource allocation, Web service composition.
+  <meta property="og:title" content="Evolutionary Computation for Combinatorial Optimisation (ECCO) Group | Yi Mei @ VUW">
+  <meta property="og:description" content="Introduction Evolutionary Computation for Combinatorial Optimisation (ECCO) Group is a sub-group under the Evolutionary Computation Research Group in Victoria University of Wellington, New Zealand. The group has a wide range of research interests and projects in solving combinatorial optimisation problems using evolutionary computation, including evolutionary vehicle/arc routing, job shop scheduling, cloud resource allocation, Web service composition.
 People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optimisation, Hyper-heuristics, Genetic Programming, Dynamic Optimisation, Large-Scale Optimisation Prof."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
@@ -133,7 +133,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 
   
 
-  <title> | Yi Mei @ VUW</title>
+  <title>Evolutionary Computation for Combinatorial Optimisation (ECCO) Group | Yi Mei @ VUW</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" >
@@ -406,7 +406,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
   
   
 <div class="article-container pt-3">
-  <h1 itemprop="name"></h1>
+  <h1 itemprop="name">Evolutionary Computation for Combinatorial Optimisation (ECCO) Group</h1>
 
   
 
@@ -440,7 +440,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fecco%2f"
+         href="https://twitter.com/intent/tweet?text=Evolutionary%20Computation%20for%20Combinatorial%20Optimisation%20%28ECCO%29%20Group&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fecco%2f"
          target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
@@ -454,21 +454,21 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fecco%2f&amp;title="
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fecco%2f&amp;title=Evolutionary%20Computation%20for%20Combinatorial%20Optimisation%20%28ECCO%29%20Group"
          target="_blank" rel="noopener">
         <i class="fab fa-linkedin-in"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fmeiyi1986.github.io%2fecco%2f&amp;title="
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fmeiyi1986.github.io%2fecco%2f&amp;title=Evolutionary%20Computation%20for%20Combinatorial%20Optimisation%20%28ECCO%29%20Group"
          target="_blank" rel="noopener">
         <i class="fab fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=&amp;body=https%3a%2f%2fmeiyi1986.github.io%2fecco%2f">
+         href="mailto:?subject=Evolutionary%20Computation%20for%20Combinatorial%20Optimisation%20%28ECCO%29%20Group&amp;body=https%3a%2f%2fmeiyi1986.github.io%2fecco%2f">
         <i class="fas fa-envelope"></i>
       </a>
     </li>
@@ -505,8 +505,6 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 
     <div class="article-style" itemprop="articleBody">
       
-
-<h2 id="evolutionary-computation-for-combinatorial-optimisation-ecco-group">Evolutionary Computation for Combinatorial Optimisation (ECCO) Group</h2>
 
 <h3 id="introduction">Introduction</h3>
 
