--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="Talks of the ECCO group  2021/03/31, Tao Shi, 2021/03/24, Joao Costa, 2021/03/17, Shaolin Wang, alpha-dominance multi-objective genetic programming for uncertain arc routing 2021/03/10, Yifan Yang, data-driven bus timetable optimisation 2021/03/03, Zhixing Huang, representations of GP for JSS 2021/02/24, Kirita-Rose Escott, practice PhD proposal. 2021/02/17, Mazhar Anzari Ardeh, multitask genetic programming for UCARP. 2021/02/10, Meng Xu, reinforcement learning and genetic programming for dynamic flexible job shop scheduling. 2021/02/03, Jordan MacLachlan, presentation on look-ahead GP for UCARP.">
+  <meta name="description" content="2021/03/31, Tao Shi, 2021/03/24, Joao Costa, 2021/03/17, Shaolin Wang, alpha-dominance multi-objective genetic programming for uncertain arc routing 2021/03/10, Yifan Yang, data-driven bus timetable optimisation 2021/03/03, Zhixing Huang, representations of GP for JSS 2021/02/24, Kirita-Rose Escott, practice PhD proposal. 2021/02/17, Mazhar Anzari Ardeh, multitask genetic programming for UCARP. 2021/02/10, Meng Xu, reinforcement learning and genetic programming for dynamic flexible job shop scheduling. 2021/02/03, Jordan MacLachlan, presentation on look-ahead GP for UCARP.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -119,8 +119,8 @@
   
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
-  <meta property="og:title" content=" | Yi Mei @ VUW">
-  <meta property="og:description" content="Talks of the ECCO group  2021/03/31, Tao Shi, 2021/03/24, Joao Costa, 2021/03/17, Shaolin Wang, alpha-dominance multi-objective genetic programming for uncertain arc routing 2021/03/10, Yifan Yang, data-driven bus timetable optimisation 2021/03/03, Zhixing Huang, representations of GP for JSS 2021/02/24, Kirita-Rose Escott, practice PhD proposal. 2021/02/17, Mazhar Anzari Ardeh, multitask genetic programming for UCARP. 2021/02/10, Meng Xu, reinforcement learning and genetic programming for dynamic flexible job shop scheduling. 2021/02/03, Jordan MacLachlan, presentation on look-ahead GP for UCARP."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
+  <meta property="og:description" content="2021/03/31, Tao Shi, 2021/03/24, Joao Costa, 2021/03/17, Shaolin Wang, alpha-dominance multi-objective genetic programming for uncertain arc routing 2021/03/10, Yifan Yang, data-driven bus timetable optimisation 2021/03/03, Zhixing Huang, representations of GP for JSS 2021/02/24, Kirita-Rose Escott, practice PhD proposal. 2021/02/17, Mazhar Anzari Ardeh, multitask genetic programming for UCARP. 2021/02/10, Meng Xu, reinforcement learning and genetic programming for dynamic flexible job shop scheduling. 2021/02/03, Jordan MacLachlan, presentation on look-ahead GP for UCARP."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -131,7 +131,7 @@
 
   
 
-  <title> | Yi Mei @ VUW</title>
+  <title>Talks of the ECCO group | Yi Mei @ VUW</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" >
@@ -404,7 +404,7 @@
   
   
 <div class="article-container pt-3">
-  <h1 itemprop="name"></h1>
+  <h1 itemprop="name">Talks of the ECCO group</h1>
 
   
 
@@ -438,7 +438,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fecco-talks%2f"
+         href="https://twitter.com/intent/tweet?text=Talks%20of%20the%20ECCO%20group&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fecco-talks%2f"
          target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
@@ -452,21 +452,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fecco-talks%2f&amp;title="
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fecco-talks%2f&amp;title=Talks%20of%20the%20ECCO%20group"
          target="_blank" rel="noopener">
         <i class="fab fa-linkedin-in"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fmeiyi1986.github.io%2fecco-talks%2f&amp;title="
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fmeiyi1986.github.io%2fecco-talks%2f&amp;title=Talks%20of%20the%20ECCO%20group"
          target="_blank" rel="noopener">
         <i class="fab fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=&amp;body=https%3a%2f%2fmeiyi1986.github.io%2fecco-talks%2f">
+         href="mailto:?subject=Talks%20of%20the%20ECCO%20group&amp;body=https%3a%2f%2fmeiyi1986.github.io%2fecco-talks%2f">
         <i class="fas fa-envelope"></i>
       </a>
     </li>
@@ -502,11 +502,7 @@
   <div class="article-container">
 
     <div class="article-style" itemprop="articleBody">
-      
-
-<h2 id="talks-of-the-ecco-group"><strong>Talks of the ECCO group</strong></h2>
-
-<ul>
+      <ul>
 <li>2021/03/31, <strong><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></strong>,</li>
 <li>2021/03/24, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a></strong>,</li>
 <li>2021/03/17, <strong><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></strong>, alpha-dominance multi-objective genetic programming for uncertain arc routing</li>
