--- a/reviewers/index.html
+++ b/reviewers/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content=" Journal Reviewer  IEEE Transactions on Evolutionary Computation, IEEE (ARC/CORE Tier A*, Q1) Evolutionary Computation Journal, MIT Press (ARC/CORE Tier A, Q1) IEEE Transactions on Cybernetics, IEEE (ARC/CORE Tier A, Q1) (Outstanding Reviewer 2018) IEEE Transactions on Parallel and Distributed Systems, IEEE (ARC/CORE Tier A*, Q1) European Journal of Operational Research, Elsevier (ARC/CORE Tier A, Q1) Swarm and Evolutionary Computation, Elsevier (Q1) Future Generation Computer Systems, Elsevier (ARC/CORE Tier A, Q1) Information Sciences, Elsevier (ARC/CORE Tier A, Q1) Proceedings of the IEEE, IEEE (Q1) Transportation Research Part C, Elsevier (Q1) Transportation Research Part D, Elsevier (Q1) IEEE Transactions on Emerging Topics in Computing, IEEE (Q1) IEEE Transactions on Emerging Topics in Computational Intelligence, IEEE International Journal of Production Research, Taylor &amp; Francis (Q1) Waste Management, Elsevier (Q1) Computers and Industrial Engineering, Elsevier (Q1) IEEE Transactions on Services Computing, IEEE (Q1) Pervasive and Mobile Computing, Elsevier (Q1) Applied Soft Computing, Elsevier (Q1) (Outstanding Reviewer 2015, 2017) Engineering Applications of Artificial Intelligence, Elsevier (Q1) Robotics and Computer-Integrated Manufacturing, Elsevier (Q1) NeuroComputing, Elsevier (Q1) Journal of Scheduling, Springer (Q1) Journal of Heuristics, Springer Complexity, Hindawi (Q1) ACM Transactions on Evolutionary Learning and Optimization, ACM World Wide Web, Springer (Q2) IEEE/CAA Journal of Automatica Sinica Mathematical Problems in Engineering, Hindawi Swarm Intelligence, Springer Genetic Programming and Evolvable Machines, Springer Journal of Information Technology &amp; Software Engineering Applied Sciences Soft Computing Complex &amp; Intelligent Systems Computational Intelligence and Neuroscience Computational Optimization and Applications Memetic Computing Journal of Industrial and Production Engineering Journal of Computer Science and Technology Natural Computing EURASIP Journal on Wireless Communications and Networking PLOS ONE Journal Frontiers in Computer Science Frontier of Engineering Management  ">
+  <meta name="description" content=" IEEE Transactions on Evolutionary Computation, IEEE (ARC/CORE Tier A*, Q1) Evolutionary Computation Journal, MIT Press (ARC/CORE Tier A, Q1) IEEE Transactions on Cybernetics, IEEE (ARC/CORE Tier A, Q1) (Outstanding Reviewer 2018) IEEE Transactions on Parallel and Distributed Systems, IEEE (ARC/CORE Tier A*, Q1) European Journal of Operational Research, Elsevier (ARC/CORE Tier A, Q1) Swarm and Evolutionary Computation, Elsevier (Q1) Future Generation Computer Systems, Elsevier (ARC/CORE Tier A, Q1) Information Sciences, Elsevier (ARC/CORE Tier A, Q1) Proceedings of the IEEE, IEEE (Q1) Transportation Research Part C, Elsevier (Q1) Transportation Research Part D, Elsevier (Q1) IEEE Transactions on Emerging Topics in Computing, IEEE (Q1) IEEE Transactions on Emerging Topics in Computational Intelligence, IEEE International Journal of Production Research, Taylor &amp; Francis (Q1) Waste Management, Elsevier (Q1) Computers and Industrial Engineering, Elsevier (Q1) IEEE Transactions on Services Computing, IEEE (Q1) Pervasive and Mobile Computing, Elsevier (Q1) Applied Soft Computing, Elsevier (Q1) (Outstanding Reviewer 2015, 2017) Engineering Applications of Artificial Intelligence, Elsevier (Q1) Robotics and Computer-Integrated Manufacturing, Elsevier (Q1) NeuroComputing, Elsevier (Q1) Journal of Scheduling, Springer (Q1) Journal of Heuristics, Springer Complexity, Hindawi (Q1) ACM Transactions on Evolutionary Learning and Optimization, ACM World Wide Web, Springer (Q2) IEEE/CAA Journal of Automatica Sinica Mathematical Problems in Engineering, Hindawi Swarm Intelligence, Springer Genetic Programming and Evolvable Machines, Springer Journal of Information Technology &amp; Software Engineering Applied Sciences Soft Computing Complex &amp; Intelligent Systems Computational Intelligence and Neuroscience Computational Optimization and Applications Memetic Computing Journal of Industrial and Production Engineering Journal of Computer Science and Technology Natural Computing EURASIP Journal on Wireless Communications and Networking PLOS ONE Journal Frontiers in Computer Science Frontier of Engineering Management  ">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/reviewers/">
@@ -119,8 +119,8 @@
   
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/reviewers/">
-  <meta property="og:title" content=" | Yi Mei @ VUW">
-  <meta property="og:description" content=" Journal Reviewer  IEEE Transactions on Evolutionary Computation, IEEE (ARC/CORE Tier A*, Q1) Evolutionary Computation Journal, MIT Press (ARC/CORE Tier A, Q1) IEEE Transactions on Cybernetics, IEEE (ARC/CORE Tier A, Q1) (Outstanding Reviewer 2018) IEEE Transactions on Parallel and Distributed Systems, IEEE (ARC/CORE Tier A*, Q1) European Journal of Operational Research, Elsevier (ARC/CORE Tier A, Q1) Swarm and Evolutionary Computation, Elsevier (Q1) Future Generation Computer Systems, Elsevier (ARC/CORE Tier A, Q1) Information Sciences, Elsevier (ARC/CORE Tier A, Q1) Proceedings of the IEEE, IEEE (Q1) Transportation Research Part C, Elsevier (Q1) Transportation Research Part D, Elsevier (Q1) IEEE Transactions on Emerging Topics in Computing, IEEE (Q1) IEEE Transactions on Emerging Topics in Computational Intelligence, IEEE International Journal of Production Research, Taylor &amp; Francis (Q1) Waste Management, Elsevier (Q1) Computers and Industrial Engineering, Elsevier (Q1) IEEE Transactions on Services Computing, IEEE (Q1) Pervasive and Mobile Computing, Elsevier (Q1) Applied Soft Computing, Elsevier (Q1) (Outstanding Reviewer 2015, 2017) Engineering Applications of Artificial Intelligence, Elsevier (Q1) Robotics and Computer-Integrated Manufacturing, Elsevier (Q1) NeuroComputing, Elsevier (Q1) Journal of Scheduling, Springer (Q1) Journal of Heuristics, Springer Complexity, Hindawi (Q1) ACM Transactions on Evolutionary Learning and Optimization, ACM World Wide Web, Springer (Q2) IEEE/CAA Journal of Automatica Sinica Mathematical Problems in Engineering, Hindawi Swarm Intelligence, Springer Genetic Programming and Evolvable Machines, Springer Journal of Information Technology &amp; Software Engineering Applied Sciences Soft Computing Complex &amp; Intelligent Systems Computational Intelligence and Neuroscience Computational Optimization and Applications Memetic Computing Journal of Industrial and Production Engineering Journal of Computer Science and Technology Natural Computing EURASIP Journal on Wireless Communications and Networking PLOS ONE Journal Frontiers in Computer Science Frontier of Engineering Management  "><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:title" content="Journal Reviewer | Yi Mei @ VUW">
+  <meta property="og:description" content=" IEEE Transactions on Evolutionary Computation, IEEE (ARC/CORE Tier A*, Q1) Evolutionary Computation Journal, MIT Press (ARC/CORE Tier A, Q1) IEEE Transactions on Cybernetics, IEEE (ARC/CORE Tier A, Q1) (Outstanding Reviewer 2018) IEEE Transactions on Parallel and Distributed Systems, IEEE (ARC/CORE Tier A*, Q1) European Journal of Operational Research, Elsevier (ARC/CORE Tier A, Q1) Swarm and Evolutionary Computation, Elsevier (Q1) Future Generation Computer Systems, Elsevier (ARC/CORE Tier A, Q1) Information Sciences, Elsevier (ARC/CORE Tier A, Q1) Proceedings of the IEEE, IEEE (Q1) Transportation Research Part C, Elsevier (Q1) Transportation Research Part D, Elsevier (Q1) IEEE Transactions on Emerging Topics in Computing, IEEE (Q1) IEEE Transactions on Emerging Topics in Computational Intelligence, IEEE International Journal of Production Research, Taylor &amp; Francis (Q1) Waste Management, Elsevier (Q1) Computers and Industrial Engineering, Elsevier (Q1) IEEE Transactions on Services Computing, IEEE (Q1) Pervasive and Mobile Computing, Elsevier (Q1) Applied Soft Computing, Elsevier (Q1) (Outstanding Reviewer 2015, 2017) Engineering Applications of Artificial Intelligence, Elsevier (Q1) Robotics and Computer-Integrated Manufacturing, Elsevier (Q1) NeuroComputing, Elsevier (Q1) Journal of Scheduling, Springer (Q1) Journal of Heuristics, Springer Complexity, Hindawi (Q1) ACM Transactions on Evolutionary Learning and Optimization, ACM World Wide Web, Springer (Q2) IEEE/CAA Journal of Automatica Sinica Mathematical Problems in Engineering, Hindawi Swarm Intelligence, Springer Genetic Programming and Evolvable Machines, Springer Journal of Information Technology &amp; Software Engineering Applied Sciences Soft Computing Complex &amp; Intelligent Systems Computational Intelligence and Neuroscience Computational Optimization and Applications Memetic Computing Journal of Industrial and Production Engineering Journal of Computer Science and Technology Natural Computing EURASIP Journal on Wireless Communications and Networking PLOS ONE Journal Frontiers in Computer Science Frontier of Engineering Management  "><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -131,7 +131,7 @@
 
   
 
-  <title> | Yi Mei @ VUW</title>
+  <title>Journal Reviewer | Yi Mei @ VUW</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" >
@@ -404,7 +404,7 @@
   
   
 <div class="article-container pt-3">
-  <h1 itemprop="name"></h1>
+  <h1 itemprop="name">Journal Reviewer</h1>
 
   
 
@@ -438,7 +438,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=&amp;url=https%3a%2f%2fmeiyi1986.github.io%2freviewers%2f"
+         href="https://twitter.com/intent/tweet?text=Journal%20Reviewer&amp;url=https%3a%2f%2fmeiyi1986.github.io%2freviewers%2f"
          target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
@@ -452,21 +452,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fmeiyi1986.github.io%2freviewers%2f&amp;title="
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fmeiyi1986.github.io%2freviewers%2f&amp;title=Journal%20Reviewer"
          target="_blank" rel="noopener">
         <i class="fab fa-linkedin-in"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fmeiyi1986.github.io%2freviewers%2f&amp;title="
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fmeiyi1986.github.io%2freviewers%2f&amp;title=Journal%20Reviewer"
          target="_blank" rel="noopener">
         <i class="fab fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=&amp;body=https%3a%2f%2fmeiyi1986.github.io%2freviewers%2f">
+         href="mailto:?subject=Journal%20Reviewer&amp;body=https%3a%2f%2fmeiyi1986.github.io%2freviewers%2f">
         <i class="fas fa-envelope"></i>
       </a>
     </li>
@@ -502,11 +502,7 @@
   <div class="article-container">
 
     <div class="article-style" itemprop="articleBody">
-      
-
-<h2 id="journal-reviewer"><strong>Journal Reviewer</strong></h2>
-
-<ul>
+      <ul>
 <li><a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=4235">IEEE Transactions on Evolutionary Computation</a>, IEEE <strong>(ARC/CORE Tier A*, Q1)</strong></li>
 <li><a href="http://www.mitpressjournals.org/loi/evco">Evolutionary Computation Journal</a>, MIT Press <strong>(ARC/CORE Tier A, Q1)</strong></li>
 <li><a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6221036">IEEE Transactions on Cybernetics</a>, IEEE <strong>(ARC/CORE Tier A, Q1)</strong> (<i>Outstanding Reviewer 2018</i>)</li>
