--- a/cec2021_tutorial_xaigp/index.html
+++ b/cec2021_tutorial_xaigp/index.html
@@ -518,21 +518,30 @@ In evolutionary computation, Genetic Programming (GP) has been successfully used
 
 <h2 id="outline">Outline</h2>
 
-<p>This 2-hour tutorial will be composed of the following parts:
-1. Brief introduction to XAI [25 mins]
-    - Attention/heat map
-    - LIME/SHAP
-    - Post-hoc explanation
-2. Brief introduction to GP [20 mins]
-3. Break [5 mins]
-4. How to approach better model interpretability through GP [60 mins]
-    - Multi-Objective GP
-    - Dimensionality Aware GP
-    - Ensemble GP
-    - Simplification in GP
-    - Grammar-based GP
-    - Post-hoc explanation using GP
-5. Challenges and Future Directions [10 mins]</p>
+<p>This 2-hour tutorial will be composed of the following parts:</p>
+
+<ol>
+<li>Brief introduction to XAI [25 mins]
+
+<ul>
+<li>Attention/heat map</li>
+<li>LIME/SHAP</li>
+<li>Post-hoc explanation</li>
+</ul></li>
+<li>Brief introduction to GP [20 mins]</li>
+<li>Break [5 mins]</li>
+<li>How to approach better model interpretability through GP [60 mins]
+
+<ul>
+<li>Multi-Objective GP</li>
+<li>Dimensionality Aware GP</li>
+<li>Ensemble GP</li>
+<li>Simplification in GP</li>
+<li>Grammar-based GP</li>
+<li>Post-hoc explanation using GP</li>
+</ul></li>
+<li>Challenges and Future Directions [10 mins]</li>
+</ol>
 
 <p><strong>Presenter</strong></p>
 
