--- a/cec2021_tutorial_xaigp/index.html
+++ b/cec2021_tutorial_xaigp/index.html
@@ -520,7 +520,7 @@ In evolutionary computation, Genetic Programming (GP) has been successfully used
 
 <p>This 2-hour tutorial will be composed of the following parts:</p>
 
-<ol>
+<ul>
 <li>Brief introduction to XAI [25 mins]
 
 <ul>
@@ -541,9 +541,9 @@ In evolutionary computation, Genetic Programming (GP) has been successfully used
 <li>Post-hoc explanation using GP</li>
 </ul></li>
 <li>Challenges and Future Directions [10 mins]</li>
-</ol>
+</ul>
 
-<p><strong>Presenter</strong></p>
+<h2 id="presenter">Presenter</h2>
 
 <p><strong>Dr. Yi Mei, Victoria University of Wellington, New Zealand (yi.mei@ecs.vuw.ac.nz)</strong></p>
 
